--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
-streamlit
-gspread
-oauth2client
-pandas
-python-dotenv
+streamlit==1.24.1
+gspread==5.7.2
+gspread-pandas
+oauth2client==4.1.3
+pandas==2.0.3
+python-dotenv==1.0.0
+google-auth==2.21.0
+
+
+
 
