--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-streamlit==1.24.1
-gspread==5.7.2
+streamlit
+gspread
 gspread-pandas
-oauth2client==4.1.3
-pandas==2.0.3
-python-dotenv==1.0.0
-google-auth==2.21.0
+oauth2client
+pandas
+python-dotenv
+google-auth
+
 
 
 
