--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 streamlit
-gspread
-gspread-pandas
-oauth2client
 pandas
+gspread==5.12.0
+gspread-pandas==3.3.0
+google-auth==2.29.0
+oauth2client
 python-dotenv
-google-auth
+
 
 
 
